--- a/app/src/main/res/layout/activity_create_new_student.xml
+++ b/app/src/main/res/layout/activity_create_new_student.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@drawable/green_gradnt"
-    tools:context=".StudentInformation">
+    tools:context=".CreateNewStudent">
 
     <TextView
         android:id="@+id/textView6"
@@ -37,6 +37,7 @@
 
 
         <EditText
+            android:id="@+id/nameOfReg"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -70,6 +71,7 @@
 
 
         <EditText
+            android:id="@+id/calssOfReg"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -103,6 +105,7 @@
 
 
         <EditText
+            android:id="@+id/rollOfReg"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -124,6 +127,7 @@
             />
 
         <EditText
+            android:id="@+id/secOfRow"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -158,6 +162,7 @@
 
 
         <EditText
+            android:id="@+id/phOfREg"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -191,6 +196,7 @@
 
 
         <EditText
+            android:id="@+id/adressOfReg"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -225,6 +231,7 @@
 
 
         <EditText
+            android:id="@+id/doaOfReg"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -246,15 +253,19 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="bottom|center"
+        android:weightSum="2"
+
         android:layout_marginLeft="0dp"
         android:layout_marginRight="0dp"
         >
 
         <Button
-            android:layout_width="206dp"
+            android:id="@+id/createStudentBtn"
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="#0AAF3D"
-            android:drawableLeft="@drawable/ic_check_white"
+            android:drawableStart="@drawable/ic_close_white_24dp"
             android:drawablePadding="5dp"
             android:gravity="center"
             android:text="Create"
@@ -263,13 +274,15 @@
 
             />
         <Button
-            android:layout_width="206dp"
+
+            android:layout_width="0dp"
+            android:layout_weight="1"
             android:layout_height="wrap_content"
             android:background="#FF0000"
-            android:drawableLeft="@drawable/ic_close_white_24dp"
             android:drawablePadding="5dp"
             android:gravity="center"
-            android:text="Not now"
+            android:text="Cancel"
+            android:drawableStart="@drawable/ic_check_white"
             android:textColor="#FFFFFF"
             android:textSize="20sp"
             />
