--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -77,10 +77,12 @@
                 android:layout_width="15dp"
                 android:layout_height="0dp"/>
         <androidx.cardview.widget.CardView
+            android:id="@+id/studentIdBTN"
                 android:layout_width="170dp"
                 android:layout_height="120dp">
             
             <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:background="@drawable/green_gradnt"
@@ -92,9 +94,9 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Meal Time"
+                        android:text="Student Information"
                         android:textColor="#fff"
-                        android:textSize="20dp"
+                        android:textSize="18sp"
                         android:textStyle="bold"
                         android:layout_gravity="center"
                 />
