--- a/app/src/main/res/layout/activity_student_information.xml
+++ b/app/src/main/res/layout/activity_student_information.xml
@@ -23,9 +23,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
 
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -57,8 +57,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -70,12 +70,13 @@
 
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:textColor="#000000"
             android:textSize="18sp"
+            android:inputType="text"
             android:backgroundTint="#A7A7A7"
             android:layout_marginLeft="5dp"
             />
@@ -89,8 +90,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -102,13 +103,34 @@
 
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:textColor="#000000"
             android:textSize="18sp"
             android:inputType="number"
+            android:backgroundTint="#A7A7A7"
+            android:layout_marginLeft="5dp"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sec : "
+            android:layout_marginLeft="10dp"
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            />
+
+        <EditText
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:inputType="text"
             android:backgroundTint="#A7A7A7"
             android:layout_marginLeft="5dp"
             />
@@ -122,12 +144,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Phone\n(gardiun) : "
+            android:text="Phone\n(guardian) : "
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="#000000"
@@ -136,7 +158,7 @@
 
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
@@ -156,8 +178,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp">
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Addresss : "
+            android:textStyle="bold"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            />
+
+
+        <EditText
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:ems="10"
+            android:textColor="#000000"
+            android:textSize="18sp"
+            android:inputType="text"
+            android:backgroundTint="#A7A7A7"
+            android:layout_marginLeft="5dp"
+            />
+
+
+    </LinearLayout>
+    <Space
+        android:layout_width="0dp"
+        android:layout_height="15dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -170,33 +225,37 @@
 
 
         <EditText
-            android:layout_width="150dp"
+            android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
             android:textColor="#000000"
             android:textSize="18sp"
             android:inputType="date"
+
             android:backgroundTint="#A7A7A7"
             android:layout_marginLeft="5dp"
             />
 
 
     </LinearLayout>
+
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="bottom|center"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
         >
 
         <Button
-            android:layout_width="205dp"
+            android:layout_width="206dp"
             android:layout_height="wrap_content"
             android:background="#0AAF3D"
             android:drawableLeft="@drawable/ic_check_white"
             android:drawablePadding="5dp"
-            android:drawableTintMode="screen"
             android:gravity="center"
             android:text="Create"
             android:textColor="#FFFFFF"
@@ -204,12 +263,11 @@
 
             />
         <Button
-            android:layout_width="205dp"
+            android:layout_width="206dp"
             android:layout_height="wrap_content"
             android:background="#FF0000"
             android:drawableLeft="@drawable/ic_close_white_24dp"
             android:drawablePadding="5dp"
-            android:drawableTintMode="screen"
             android:gravity="center"
             android:text="Not now"
             android:textColor="#FFFFFF"
