--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -6,23 +6,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
-    
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="High School Hostel"
-            android:textColor="#000"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:layout_marginTop="40dp"
-    />
+    tools:context=".HomePage">
+
+
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="40dp">
+            android:layout_marginTop="50dp">
         
         <View android:layout_width="2dp"
               android:layout_height="match_parent"
@@ -293,6 +284,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
+
             android:gravity="center"
     >
         
@@ -337,13 +329,16 @@
                     android:background="@drawable/green_gradnt"
                     android:orientation="horizontal"
                     android:gravity="center"
+
+
             
             >
                 
                 <TextView
+                        android:id="@+id/add_stdn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Abcdedsss"
+                        android:text="Add Student"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -355,7 +350,9 @@
         </androidx.cardview.widget.CardView>
     
     </LinearLayout>
-    
+    <Space
+        android:layout_width="20dp"
+        android:layout_height="0dp"/>
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
