--- a/app/src/main/res/layout/activity_student_list_page.xml
+++ b/app/src/main/res/layout/activity_student_list_page.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@color/myGrey"
     tools:context=".studentListPage">
 
 
@@ -26,14 +27,10 @@
     </com.google.android.material.appbar.MaterialToolbar>
 
 
-
-
-
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reclyclerViewForAllDonorList"
+        android:id="@+id/reclyclerViewForAllStudent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#EFEFEF"
         >
 
     </androidx.recyclerview.widget.RecyclerView>
