--- a/app/src/main/res/layout/activity_create_new_student.xml
+++ b/app/src/main/res/layout/activity_create_new_student.xml
@@ -214,6 +214,7 @@
         android:layout_width="0dp"
         android:layout_height="15dp" />
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -221,6 +222,7 @@
         android:layout_marginRight="20dp">
 
         <TextView
+
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Date of\nAddmision : "
