--- a/app/src/main/res/layout/activity_expense__row.xml
+++ b/app/src/main/res/layout/activity_expense__row.xml
@@ -1,22 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     tools:context=".Expense_Row">
 
     <androidx.cardview.widget.CardView
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="130dp"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:elevation="8dp"
+        app:cardCornerRadius="6dp"
+
         >
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
-            android:background="@drawable/green_gradnt"
-            android:layout_marginTop="10dp"
+            android:background="@drawable/orenge_gredient"
+
             >
 
             <LinearLayout
@@ -37,6 +41,7 @@
 
 
                 <TextView
+                    android:id="@+id/reasonId"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="kaca Bazar"
@@ -66,6 +71,7 @@
 
 
                 <TextView
+                    android:id="@+id/amountID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="10,300"
@@ -103,7 +109,8 @@
 
 
                 <TextView
-                    android:layout_width="100dp"
+                    android:id="@+id/dateID"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="22/05/2019"
                     android:textColor="#FFFFFF"
