--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -94,10 +94,11 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Student Information"
+                        android:text="Student \n Information"
                         android:textColor="#fff"
                         android:textSize="18sp"
                         android:textStyle="bold"
+                    android:textAlignment="center"
                         android:layout_gravity="center"
                 />
             
@@ -152,10 +153,12 @@
    
     
         <androidx.cardview.widget.CardView
+            android:id="@+id/finaceBtn"
             android:layout_width="170dp"
             android:layout_height="60dp">
         
         <LinearLayout
+
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="@drawable/green_gradnt"
@@ -167,9 +170,9 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Abcdedsss"
+                    android:text="Finace"
                     android:textColor="#fff"
-                    android:textSize="20dp"
+                    android:textSize="20sp"
                     android:textStyle="bold"
                     android:layout_gravity="center"
             />
@@ -196,7 +199,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Abcdedsss"
+                        android:text="Fee Collector"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -237,7 +240,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Abcdedsss"
+                        android:text="Admin Panel"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -266,7 +269,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Abcdedsss"
+                        android:text="Meal Time"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"
@@ -293,6 +296,7 @@
         
         
         <androidx.cardview.widget.CardView
+            android:id="@+id/complainID"
                 android:layout_width="170dp"
                 android:layout_height="60dp">
             
@@ -308,7 +312,7 @@
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Abcdedsss"
+                        android:text="Complain Box"
                         android:textColor="#fff"
                         android:textSize="20dp"
                         android:textStyle="bold"
