--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="myGrey">#aeaeae</color>
+    <color name="green">#2ecc71</color>
+    <color name="red">#bd081c</color>
 </resources>
