--- a/app/src/main/res/layout/activity_complain_list.xml
+++ b/app/src/main/res/layout/activity_complain_list.xml
@@ -5,12 +5,11 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
-    android:background="@color/myGrey"
     tools:context=".studentListPage">
 
 
     <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbarInComplainList"
         android:minHeight="?attr/actionBarSize"
         app:navigationIcon="@drawable/backword_signsmall"
         app:theme="@style/ToolBarStyle"
@@ -28,10 +27,10 @@
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/reclyclerViewForAllStudent"
+        android:id="@+id/reclyclerViewForComplainList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:background="@color/myGrey"
+        android:layout_height="match_parent">
 
     </androidx.recyclerview.widget.RecyclerView>
 
