--- a/app/src/main/res/layout/activity_hisab_page.xml
+++ b/app/src/main/res/layout/activity_hisab_page.xml
@@ -99,7 +99,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:background="@drawable/green_gredient"
+                        android:background="@drawable/blue_gradnt"
                         android:orientation="vertical">
 
                         <TextView
@@ -168,8 +168,7 @@
                 android:id="@+id/expencesList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Add Expences"
-                />
+                android:text="Add Expences" />
 
 
 
