--- a/app/src/main/res/drawable/pink_gredient.xml
+++ b/app/src/main/res/drawable/pink_gredient.xml
@@ -2,8 +2,8 @@
 <shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:endColor="#34EBE9"
-        android:startColor="#D0FFAE"/>
+        android:endColor="#EB6180"
+        android:startColor="#F169DB"/>
     <corners android:radius="8dp" />
 
 </shape>
