--- a/app/src/main/res/layout/activity_complain__row.xml
+++ b/app/src/main/res/layout/activity_complain__row.xml
@@ -188,8 +188,8 @@
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_marginLeft="10dp"
-                       android:textSize="16dp"
+                       android:layout_marginStart="10dp"
+                       android:textSize="16sp"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:textStyle="bold"
@@ -199,8 +199,8 @@
                        android:id="@+id/dateOFROWW"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
-                       android:layout_marginLeft="5dp"
-                       android:textSize="16dp"
+                       android:layout_marginStart="5dp"
+                       android:textSize="16sp"
                        android:textColor="#fff"
                        android:gravity="center"
                        android:textStyle="bold"
