--- a/app/src/main/res/layout/activity_fees__row.xml
+++ b/app/src/main/res/layout/activity_fees__row.xml
@@ -8,7 +8,7 @@
     tools:context=".Fees_Row">
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         >
         <LinearLayout
@@ -119,7 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp">
                 <TextView
@@ -178,13 +178,14 @@
 
             <TextView
                 android:id="@+id/paymentOfRow"
-                android:layout_width="100dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text=""
-                android:textColor="#FFFFFF"
-                android:textSize="0.1sp"
-                android:visibility="invisible"
-                android:layout_marginStart="5dp"
+                android:text="Month List :"
+                android:textColor="#fff"
+                android:textSize="18sp"
+                android:layout_marginStart="18dp"
+                android:textStyle="bold"
+                android:visibility="gone"
                 />
 
 
