--- a/app/src/main/res/layout/home_page.xml
+++ b/app/src/main/res/layout/home_page.xml
@@ -6,7 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:ba
     tools:context=".HomePage">
 
 
@@ -185,6 +184,7 @@
                 android:layout_width="15dp"
                 android:layout_height="0dp"/>
         <androidx.cardview.widget.CardView
+                android:id="@+id/feeCollector"
                 android:layout_width="170dp"
                 android:layout_height="60dp">
 
